--- a/node-red/Dockerfile
+++ b/node-red/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/node-red
 
 USER root
 
-RUN apt-get update && apt-get install -y jq
+RUN apt-get update && apt-get install -y jq && rm -rf /var/lib/apt/lists/* && apt-get clean
 RUN cd /data && npm install node-red-contrib-home-assistant
 
 # Expose tcp/1880
